Tratamento da coluna data_desligamento_formatada: converter datas existentes para formato padrão e marcar servidores ativos com ativo

--- a/notebooks/03_data_preparation.ipynb
+++ b/notebooks/03_data_preparation.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 139,
    "id": "899a1044-2e32-4c99-9668-f8e12fe64319",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,8 @@
     "import unicodedata\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from pathlib import Path"
+    "from pathlib import Path\n",
+    "from datetime import datetime"
    ]
   },
   {
@@ -3976,9 +3977,366 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "54086fcf-b7d5-498b-9691-edf317d3ee45",
+   "metadata": {},
+   "source": [
+    "## Tratamento da coluna `data_desligamento`\n",
+    "\n",
+    "A coluna `data_desligamento` indica a data em que o servidor foi desligado do cargo. Após análise, observou-se que a maioria dos registros apresenta valor nulo (`NaN`), pois servidores públicos geralmente permanecem ativos por longos períodos, sendo que desligamentos ocorrem apenas em casos de cargos comissionados ou situações fora do padrão.\n",
+    "\n",
+    "**Processo de tratamento aplicado:**\n",
+    "\n",
+    "1. Foi criada uma nova coluna `data_desligamento_formatada` para manter a informação original intacta.\n",
+    "2. Para registros com valor nulo (`NaN`), foi definido o símbolo `\"-\"` indicando que o servidor está ativo.\n",
+    "3. Para registros com data, o valor foi convertido para o tipo `date`, garantindo consistência e formato padrão (`YYYY-MM-DD`).\n",
+    "4. Essa abordagem permite análises futuras, como identificação de servidores desligados, cálculo de tempo de serviço, entre outros, sem perder a informação original.\n",
+    "\n",
+    "Exemplo de resultado:\n",
+    "\n",
+    "| data_desligamento | data_desligamento_formatada |\n",
+    "|------------------|----------------------------|\n",
+    "| NaN              | -                          |\n",
+    "| 15/08/2020       | 2020-08-15                 |\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "id": "8da8d2ce-e095-4693-8e00-7523824b92f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def formatar_desligamento(data):\n",
+    "    if pd.isna(data):\n",
+    "        return \"ATIVO\"\n",
+    "    else:\n",
+    "        return pd.to_datetime(data, dayfirst=True).date()\n",
+    "\n",
+    "df_prepared[\"data_desligamento_formatada\"] = df_prepared[\"data_desligamento\"].apply(formatar_desligamento)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "id": "d53dea89-c167-44c7-aaef-867dd1e645e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>referencia</th>\n",
+       "      <th>nome</th>\n",
+       "      <th>cargo</th>\n",
+       "      <th>data_admissao</th>\n",
+       "      <th>tipo_regime</th>\n",
+       "      <th>descontos</th>\n",
+       "      <th>liquido</th>\n",
+       "      <th>data_desligamento</th>\n",
+       "      <th>proventos</th>\n",
+       "      <th>contrato</th>\n",
+       "      <th>...</th>\n",
+       "      <th>arquivo_origem</th>\n",
+       "      <th>mes_referencia</th>\n",
+       "      <th>tipo_pagamento</th>\n",
+       "      <th>nome_servidor_norm</th>\n",
+       "      <th>sexo_inferido</th>\n",
+       "      <th>id_servidor</th>\n",
+       "      <th>cargo_norm</th>\n",
+       "      <th>categoria_cargo</th>\n",
+       "      <th>cargo_categorizado</th>\n",
+       "      <th>data_desligamento_formatada</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Folha Complementar - Abril</td>\n",
+       "      <td>ACACIO DONIZETTI DE OLIVEIRA</td>\n",
+       "      <td>MECANICO II</td>\n",
+       "      <td>1991-04-08</td>\n",
+       "      <td>REGIME PROPRIO</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1000.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.000,00</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>abr2025.csv</td>\n",
+       "      <td>Abril</td>\n",
+       "      <td>vale_alimentacao</td>\n",
+       "      <td>ACACIO DONIZETTI DE OLIVEIRA</td>\n",
+       "      <td>M</td>\n",
+       "      <td>5a69806a2b26328cb82b24260282ba8037ddf3a430cff8...</td>\n",
+       "      <td>MECANICO II</td>\n",
+       "      <td>operacional</td>\n",
+       "      <td>True</td>\n",
+       "      <td>ATIVO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Folha Mensal - Abril</td>\n",
+       "      <td>ACACIO DONIZETTI DE OLIVEIRA</td>\n",
+       "      <td>MECANICO II</td>\n",
+       "      <td>1991-04-08</td>\n",
+       "      <td>REGIME PROPRIO</td>\n",
+       "      <td>1584.02</td>\n",
+       "      <td>3603.75</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5.187,77</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>abr2025.csv</td>\n",
+       "      <td>Abril</td>\n",
+       "      <td>folha_mensal</td>\n",
+       "      <td>ACACIO DONIZETTI DE OLIVEIRA</td>\n",
+       "      <td>M</td>\n",
+       "      <td>5a69806a2b26328cb82b24260282ba8037ddf3a430cff8...</td>\n",
+       "      <td>MECANICO II</td>\n",
+       "      <td>operacional</td>\n",
+       "      <td>True</td>\n",
+       "      <td>ATIVO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Folha Complementar - Abril</td>\n",
+       "      <td>ADA ESTER ARCHILA</td>\n",
+       "      <td>TECNICO EM ENFERMAGEM</td>\n",
+       "      <td>2023-12-04</td>\n",
+       "      <td>REGIME PROPRIO</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1000.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.000,00</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>abr2025.csv</td>\n",
+       "      <td>Abril</td>\n",
+       "      <td>vale_alimentacao</td>\n",
+       "      <td>ADA ESTER ARCHILA</td>\n",
+       "      <td>F</td>\n",
+       "      <td>348b58a2d1473088be45887aaa8b05de2944865139083c...</td>\n",
+       "      <td>TECNICO EM ENFERMAGEM</td>\n",
+       "      <td>saude</td>\n",
+       "      <td>True</td>\n",
+       "      <td>ATIVO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Folha Mensal - Abril</td>\n",
+       "      <td>ADA ESTER ARCHILA</td>\n",
+       "      <td>TECNICO EM ENFERMAGEM</td>\n",
+       "      <td>2023-12-04</td>\n",
+       "      <td>REGIME PROPRIO</td>\n",
+       "      <td>1330.84</td>\n",
+       "      <td>5432.23</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6.763,07</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>abr2025.csv</td>\n",
+       "      <td>Abril</td>\n",
+       "      <td>folha_mensal</td>\n",
+       "      <td>ADA ESTER ARCHILA</td>\n",
+       "      <td>F</td>\n",
+       "      <td>348b58a2d1473088be45887aaa8b05de2944865139083c...</td>\n",
+       "      <td>TECNICO EM ENFERMAGEM</td>\n",
+       "      <td>saude</td>\n",
+       "      <td>True</td>\n",
+       "      <td>ATIVO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Folha Complementar - Abril</td>\n",
+       "      <td>ADAO RODRIGUES DE JESUS</td>\n",
+       "      <td>JARDINEIRO</td>\n",
+       "      <td>1991-04-08</td>\n",
+       "      <td>REGIME PROPRIO</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1000.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.000,00</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>abr2025.csv</td>\n",
+       "      <td>Abril</td>\n",
+       "      <td>vale_alimentacao</td>\n",
+       "      <td>ADAO RODRIGUES DE JESUS</td>\n",
+       "      <td>M</td>\n",
+       "      <td>28b810f6dcab5e62dcaddb7d93fa4384c7858119885ee4...</td>\n",
+       "      <td>JARDINEIRO</td>\n",
+       "      <td>operacional</td>\n",
+       "      <td>True</td>\n",
+       "      <td>ATIVO</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 25 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   referencia                          nome  \\\n",
+       "0  Folha Complementar - Abril  ACACIO DONIZETTI DE OLIVEIRA   \n",
+       "1        Folha Mensal - Abril  ACACIO DONIZETTI DE OLIVEIRA   \n",
+       "2  Folha Complementar - Abril             ADA ESTER ARCHILA   \n",
+       "3        Folha Mensal - Abril             ADA ESTER ARCHILA   \n",
+       "4  Folha Complementar - Abril       ADAO RODRIGUES DE JESUS   \n",
+       "\n",
+       "                   cargo data_admissao     tipo_regime  descontos  liquido  \\\n",
+       "0            MECANICO II    1991-04-08  REGIME PROPRIO       0.00  1000.00   \n",
+       "1            MECANICO II    1991-04-08  REGIME PROPRIO    1584.02  3603.75   \n",
+       "2  TECNICO EM ENFERMAGEM    2023-12-04  REGIME PROPRIO       0.00  1000.00   \n",
+       "3  TECNICO EM ENFERMAGEM    2023-12-04  REGIME PROPRIO    1330.84  5432.23   \n",
+       "4             JARDINEIRO    1991-04-08  REGIME PROPRIO       0.00  1000.00   \n",
+       "\n",
+       "  data_desligamento proventos  contrato  ...  arquivo_origem mes_referencia  \\\n",
+       "0               NaN  1.000,00       1.0  ...     abr2025.csv          Abril   \n",
+       "1               NaN  5.187,77       1.0  ...     abr2025.csv          Abril   \n",
+       "2               NaN  1.000,00       1.0  ...     abr2025.csv          Abril   \n",
+       "3               NaN  6.763,07       1.0  ...     abr2025.csv          Abril   \n",
+       "4               NaN  1.000,00       1.0  ...     abr2025.csv          Abril   \n",
+       "\n",
+       "     tipo_pagamento            nome_servidor_norm  sexo_inferido  \\\n",
+       "0  vale_alimentacao  ACACIO DONIZETTI DE OLIVEIRA              M   \n",
+       "1      folha_mensal  ACACIO DONIZETTI DE OLIVEIRA              M   \n",
+       "2  vale_alimentacao             ADA ESTER ARCHILA              F   \n",
+       "3      folha_mensal             ADA ESTER ARCHILA              F   \n",
+       "4  vale_alimentacao       ADAO RODRIGUES DE JESUS              M   \n",
+       "\n",
+       "                                         id_servidor             cargo_norm  \\\n",
+       "0  5a69806a2b26328cb82b24260282ba8037ddf3a430cff8...            MECANICO II   \n",
+       "1  5a69806a2b26328cb82b24260282ba8037ddf3a430cff8...            MECANICO II   \n",
+       "2  348b58a2d1473088be45887aaa8b05de2944865139083c...  TECNICO EM ENFERMAGEM   \n",
+       "3  348b58a2d1473088be45887aaa8b05de2944865139083c...  TECNICO EM ENFERMAGEM   \n",
+       "4  28b810f6dcab5e62dcaddb7d93fa4384c7858119885ee4...             JARDINEIRO   \n",
+       "\n",
+       "  categoria_cargo cargo_categorizado data_desligamento_formatada  \n",
+       "0     operacional               True                       ATIVO  \n",
+       "1     operacional               True                       ATIVO  \n",
+       "2           saude               True                       ATIVO  \n",
+       "3           saude               True                       ATIVO  \n",
+       "4     operacional               True                       ATIVO  \n",
+       "\n",
+       "[5 rows x 25 columns]"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_prepared.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "id": "8558c279-871f-45f7-8e26-6b89d21c7456",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "74"
+      ]
+     },
+     "execution_count": 144,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_prepared[\"data_desligamento_formatada\"].nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "id": "1b10d081-bd48-43d5-aef9-a49947a30e85",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "data_desligamento_formatada\n",
+       "ATIVO         23840\n",
+       "2025-12-12       54\n",
+       "2025-06-02        7\n",
+       "2025-01-01        4\n",
+       "2025-07-01        4\n",
+       "              ...  \n",
+       "2025-10-02        1\n",
+       "2025-09-09        1\n",
+       "2025-09-25        1\n",
+       "2025-09-26        1\n",
+       "2025-09-01        1\n",
+       "Name: count, Length: 74, dtype: int64"
+      ]
+     },
+     "execution_count": 145,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_prepared[\"data_desligamento_formatada\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "id": "b70bf639-b495-4363-a53b-2cefa56a4bec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total de servidores desligados (sem duplicidade): 149\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_desligados = df_prepared[df_prepared[\"data_desligamento_formatada\"] != \"ATIVO\"]\n",
+    "total_desligados_unicos = df_desligados[\"id_servidor\"].nunique()\n",
+    "\n",
+    "print(f\"Total de servidores desligados (sem duplicidade): {total_desligados_unicos}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd1dcee8-00b9-4ae8-972a-7e9b67cdfd9f",
+   "metadata": {},
+   "source": [
+    "- Servidores desligados\n",
+    "\n",
+    "Após análise da coluna `data_desligamento_formatada`, foi identificado que **149 servidores** possuem registro de desligamento no período analisado.  \n",
+    "Para garantir consistência, a contagem considera **apenas servidores únicos**, evitando duplicidade em casos onde um servidor possui múltiplos registros de pagamento."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54086fcf-b7d5-498b-9691-edf317d3ee45",
+   "id": "0fd852be-a6db-44ab-9da6-8dfe3a752242",
    "metadata": {},
    "outputs": [],
    "source": []
