Tratar coluna proventos: converter de object no formato brasileiro para float

--- a/notebooks/03_data_preparation.ipynb
+++ b/notebooks/03_data_preparation.ipynb
@@ -4334,9 +4334,347 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "abcb863b-ae92-48da-91d0-b2685e663168",
+   "metadata": {},
+   "source": [
+    "### Tratamento da coluna `proventos`\n",
+    "\n",
+    "A coluna `proventos` representa o salário bruto do servidor e inicialmente estava no formato `object` com notação brasileira de números (ex.: `1.500,00`).\n",
+    "\n",
+    "O tratamento realizado consistiu em:\n",
+    "\n",
+    "1. Remover o ponto que separa os milhares.\n",
+    "2. Substituir a vírgula pelo ponto para padronizar o decimal.\n",
+    "3. Converter a coluna para tipo `float`.\n",
+    "\n",
+    "Após esse tratamento, a coluna está pronta para análises quantitativas, cálculos de média, soma, etc."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "id": "7b371e65-b757-4f68-a4fa-25c43cef50e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.series.Series'>\n",
+      "RangeIndex: 23997 entries, 0 to 23996\n",
+      "Series name: proventos\n",
+      "Non-Null Count  Dtype  \n",
+      "--------------  -----  \n",
+      "23919 non-null  float64\n",
+      "dtypes: float64(1)\n",
+      "memory usage: 187.6 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_prepared[\"proventos\"].info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "id": "fd3e9ab5-b0cf-43a0-8eeb-49e95ef1551a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_prepared[\"proventos\"] = (\n",
+    "    df_prepared[\"proventos\"]\n",
+    "    .str.replace(\".\", \"\", regex=False)\n",
+    "    .str.replace(\",\", \".\", regex=False)\n",
+    "    .astype(float)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "id": "5c08c66a-fef2-4dea-9f16-2afbb3c20fbc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>referencia</th>\n",
+       "      <th>nome</th>\n",
+       "      <th>cargo</th>\n",
+       "      <th>data_admissao</th>\n",
+       "      <th>tipo_regime</th>\n",
+       "      <th>descontos</th>\n",
+       "      <th>liquido</th>\n",
+       "      <th>data_desligamento</th>\n",
+       "      <th>proventos</th>\n",
+       "      <th>contrato</th>\n",
+       "      <th>...</th>\n",
+       "      <th>arquivo_origem</th>\n",
+       "      <th>mes_referencia</th>\n",
+       "      <th>tipo_pagamento</th>\n",
+       "      <th>nome_servidor_norm</th>\n",
+       "      <th>sexo_inferido</th>\n",
+       "      <th>id_servidor</th>\n",
+       "      <th>cargo_norm</th>\n",
+       "      <th>categoria_cargo</th>\n",
+       "      <th>cargo_categorizado</th>\n",
+       "      <th>data_desligamento_formatada</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Folha Complementar - Abril</td>\n",
+       "      <td>ACACIO DONIZETTI DE OLIVEIRA</td>\n",
+       "      <td>MECANICO II</td>\n",
+       "      <td>1991-04-08</td>\n",
+       "      <td>REGIME PROPRIO</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1000.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1000.00</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>abr2025.csv</td>\n",
+       "      <td>Abril</td>\n",
+       "      <td>vale_alimentacao</td>\n",
+       "      <td>ACACIO DONIZETTI DE OLIVEIRA</td>\n",
+       "      <td>M</td>\n",
+       "      <td>5a69806a2b26328cb82b24260282ba8037ddf3a430cff8...</td>\n",
+       "      <td>MECANICO II</td>\n",
+       "      <td>operacional</td>\n",
+       "      <td>True</td>\n",
+       "      <td>ATIVO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Folha Mensal - Abril</td>\n",
+       "      <td>ACACIO DONIZETTI DE OLIVEIRA</td>\n",
+       "      <td>MECANICO II</td>\n",
+       "      <td>1991-04-08</td>\n",
+       "      <td>REGIME PROPRIO</td>\n",
+       "      <td>1584.02</td>\n",
+       "      <td>3603.75</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5187.77</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>abr2025.csv</td>\n",
+       "      <td>Abril</td>\n",
+       "      <td>folha_mensal</td>\n",
+       "      <td>ACACIO DONIZETTI DE OLIVEIRA</td>\n",
+       "      <td>M</td>\n",
+       "      <td>5a69806a2b26328cb82b24260282ba8037ddf3a430cff8...</td>\n",
+       "      <td>MECANICO II</td>\n",
+       "      <td>operacional</td>\n",
+       "      <td>True</td>\n",
+       "      <td>ATIVO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Folha Complementar - Abril</td>\n",
+       "      <td>ADA ESTER ARCHILA</td>\n",
+       "      <td>TECNICO EM ENFERMAGEM</td>\n",
+       "      <td>2023-12-04</td>\n",
+       "      <td>REGIME PROPRIO</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1000.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1000.00</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>abr2025.csv</td>\n",
+       "      <td>Abril</td>\n",
+       "      <td>vale_alimentacao</td>\n",
+       "      <td>ADA ESTER ARCHILA</td>\n",
+       "      <td>F</td>\n",
+       "      <td>348b58a2d1473088be45887aaa8b05de2944865139083c...</td>\n",
+       "      <td>TECNICO EM ENFERMAGEM</td>\n",
+       "      <td>saude</td>\n",
+       "      <td>True</td>\n",
+       "      <td>ATIVO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Folha Mensal - Abril</td>\n",
+       "      <td>ADA ESTER ARCHILA</td>\n",
+       "      <td>TECNICO EM ENFERMAGEM</td>\n",
+       "      <td>2023-12-04</td>\n",
+       "      <td>REGIME PROPRIO</td>\n",
+       "      <td>1330.84</td>\n",
+       "      <td>5432.23</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6763.07</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>abr2025.csv</td>\n",
+       "      <td>Abril</td>\n",
+       "      <td>folha_mensal</td>\n",
+       "      <td>ADA ESTER ARCHILA</td>\n",
+       "      <td>F</td>\n",
+       "      <td>348b58a2d1473088be45887aaa8b05de2944865139083c...</td>\n",
+       "      <td>TECNICO EM ENFERMAGEM</td>\n",
+       "      <td>saude</td>\n",
+       "      <td>True</td>\n",
+       "      <td>ATIVO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Folha Complementar - Abril</td>\n",
+       "      <td>ADAO RODRIGUES DE JESUS</td>\n",
+       "      <td>JARDINEIRO</td>\n",
+       "      <td>1991-04-08</td>\n",
+       "      <td>REGIME PROPRIO</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1000.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1000.00</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>abr2025.csv</td>\n",
+       "      <td>Abril</td>\n",
+       "      <td>vale_alimentacao</td>\n",
+       "      <td>ADAO RODRIGUES DE JESUS</td>\n",
+       "      <td>M</td>\n",
+       "      <td>28b810f6dcab5e62dcaddb7d93fa4384c7858119885ee4...</td>\n",
+       "      <td>JARDINEIRO</td>\n",
+       "      <td>operacional</td>\n",
+       "      <td>True</td>\n",
+       "      <td>ATIVO</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 25 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   referencia                          nome  \\\n",
+       "0  Folha Complementar - Abril  ACACIO DONIZETTI DE OLIVEIRA   \n",
+       "1        Folha Mensal - Abril  ACACIO DONIZETTI DE OLIVEIRA   \n",
+       "2  Folha Complementar - Abril             ADA ESTER ARCHILA   \n",
+       "3        Folha Mensal - Abril             ADA ESTER ARCHILA   \n",
+       "4  Folha Complementar - Abril       ADAO RODRIGUES DE JESUS   \n",
+       "\n",
+       "                   cargo data_admissao     tipo_regime  descontos  liquido  \\\n",
+       "0            MECANICO II    1991-04-08  REGIME PROPRIO       0.00  1000.00   \n",
+       "1            MECANICO II    1991-04-08  REGIME PROPRIO    1584.02  3603.75   \n",
+       "2  TECNICO EM ENFERMAGEM    2023-12-04  REGIME PROPRIO       0.00  1000.00   \n",
+       "3  TECNICO EM ENFERMAGEM    2023-12-04  REGIME PROPRIO    1330.84  5432.23   \n",
+       "4             JARDINEIRO    1991-04-08  REGIME PROPRIO       0.00  1000.00   \n",
+       "\n",
+       "  data_desligamento  proventos  contrato  ...  arquivo_origem mes_referencia  \\\n",
+       "0               NaN    1000.00       1.0  ...     abr2025.csv          Abril   \n",
+       "1               NaN    5187.77       1.0  ...     abr2025.csv          Abril   \n",
+       "2               NaN    1000.00       1.0  ...     abr2025.csv          Abril   \n",
+       "3               NaN    6763.07       1.0  ...     abr2025.csv          Abril   \n",
+       "4               NaN    1000.00       1.0  ...     abr2025.csv          Abril   \n",
+       "\n",
+       "     tipo_pagamento            nome_servidor_norm  sexo_inferido  \\\n",
+       "0  vale_alimentacao  ACACIO DONIZETTI DE OLIVEIRA              M   \n",
+       "1      folha_mensal  ACACIO DONIZETTI DE OLIVEIRA              M   \n",
+       "2  vale_alimentacao             ADA ESTER ARCHILA              F   \n",
+       "3      folha_mensal             ADA ESTER ARCHILA              F   \n",
+       "4  vale_alimentacao       ADAO RODRIGUES DE JESUS              M   \n",
+       "\n",
+       "                                         id_servidor             cargo_norm  \\\n",
+       "0  5a69806a2b26328cb82b24260282ba8037ddf3a430cff8...            MECANICO II   \n",
+       "1  5a69806a2b26328cb82b24260282ba8037ddf3a430cff8...            MECANICO II   \n",
+       "2  348b58a2d1473088be45887aaa8b05de2944865139083c...  TECNICO EM ENFERMAGEM   \n",
+       "3  348b58a2d1473088be45887aaa8b05de2944865139083c...  TECNICO EM ENFERMAGEM   \n",
+       "4  28b810f6dcab5e62dcaddb7d93fa4384c7858119885ee4...             JARDINEIRO   \n",
+       "\n",
+       "  categoria_cargo cargo_categorizado data_desligamento_formatada  \n",
+       "0     operacional               True                       ATIVO  \n",
+       "1     operacional               True                       ATIVO  \n",
+       "2           saude               True                       ATIVO  \n",
+       "3           saude               True                       ATIVO  \n",
+       "4     operacional               True                       ATIVO  \n",
+       "\n",
+       "[5 rows x 25 columns]"
+      ]
+     },
+     "execution_count": 153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_prepared.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "id": "65e8f1a8-b414-4ac8-9d6f-6f473a4b60d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.series.Series'>\n",
+      "RangeIndex: 23997 entries, 0 to 23996\n",
+      "Series name: contrato\n",
+      "Non-Null Count  Dtype  \n",
+      "--------------  -----  \n",
+      "23997 non-null  float64\n",
+      "dtypes: float64(1)\n",
+      "memory usage: 187.6 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_prepared[\"contrato\"].info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "id": "b5ee82de-13b7-45ad-a897-9a13c72fa551",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "contrato\n",
+       "1.0    22714\n",
+       "2.0     1283\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 159,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_prepared[\"contrato\"].value_counts()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0fd852be-a6db-44ab-9da6-8dfe3a752242",
+   "id": "160963c1-2c85-4751-8454-80556a618013",
    "metadata": {},
    "outputs": [],
    "source": []
