Tratamento da coluna carga_horaria_semanal: conversão de float para Int64

--- a/notebooks/03_data_preparation.ipynb
+++ b/notebooks/03_data_preparation.ipynb
@@ -4623,6 +4623,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "af9b55dd-0478-4e78-948f-726ee965ea5b",
+   "metadata": {},
+   "source": [
+    "## Coluna `contrato`\n",
+    "\n",
+    "A coluna `contrato` apresenta apenas dois valores distintos: 1.0 e 2.0.  \n",
+    "Em bases de servidores públicos, é comum que números assim sejam códigos internos utilizados para diferenciar tipos de vínculo:\n",
+    "\n",
+    "- **1.0** → Contrato efetivo ou concursado (regime estatutário ou CLT de longo prazo)  \n",
+    "- **2.0** → Contrato temporário ou vínculo especial (temporário, emergencial ou comissionado)  \n",
+    "\n",
+    "**Observação:**  \n",
+    "Sem um dicionário de dados oficial, não é possível afirmar com certeza o significado exato de cada valor.  \n",
+    "\n",
+    "**Decisão adotada:**  \n",
+    "Por enquanto, a coluna `contrato` **não passará por nenhum tratamento**. Futuramente, se houver acesso à documentação oficial, poderemos criar uma coluna categórica `contrato_tipo` para facilitar análises."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 157,
    "id": "65e8f1a8-b414-4ac8-9d6f-6f473a4b60d6",
@@ -4673,11 +4693,206 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 160,
    "id": "160963c1-2c85-4751-8454-80556a618013",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['referencia', 'nome', 'cargo', 'data_admissao', 'tipo_regime',\n",
+       "       'descontos', 'liquido', 'data_desligamento', 'proventos', 'contrato',\n",
+       "       'atividade', 'nome_atividade', 'tipo_contrato',\n",
+       "       'data_prevista_termino_contrato', 'carga_horaria_semanal',\n",
+       "       'arquivo_origem', 'mes_referencia', 'tipo_pagamento',\n",
+       "       'nome_servidor_norm', 'sexo_inferido', 'id_servidor', 'cargo_norm',\n",
+       "       'categoria_cargo', 'cargo_categorizado', 'data_desligamento_formatada'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 160,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_prepared.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "id": "16377739-b95c-4356-bf01-5d8fb52bf115",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "atividade\n",
+       "10.0    24\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 163,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_prepared[\"atividade\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "69cbf5da-af87-4cd3-b2cc-f58de0f6b4a2",
+   "metadata": {},
+   "source": [
+    "## Coluna `atividade`\n",
+    "\n",
+    "A coluna `atividade` apresenta poucos registros preenchidos.  \n",
+    "Quando preenchida, contém apenas números, o que indica que provavelmente se trata de **códigos internos** da prefeitura para classificar funções ou atividades específicas.  \n",
+    "\n",
+    "**Observações:**  \n",
+    "- Não há clareza sobre o que cada código representa.  \n",
+    "- A coluna não parece ser relevante para as análises que estamos planejando.  \n",
+    "\n",
+    "**Decisão adotada:**  \n",
+    "Por enquanto, **não será realizado nenhum tratamento** na coluna `atividade`.  \n",
+    "Se futuramente for identificado o significado dos códigos, poderemos mapear ou categorizar esta coluna para análise."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e8b793a-ae4a-44e6-abdf-53f47970f266",
+   "metadata": {},
+   "source": [
+    "## Coluna `nome_atividade`\n",
+    "\n",
+    "A coluna `nome_atividade` apresenta poucos registros preenchidos.  \n",
+    "Quando preenchida, contém informações que **já estão presentes na coluna `cargo`**, ou seja, não agrega valor adicional para nossas análises.  \n",
+    "\n",
+    "**Decisão adotada:**  \n",
+    "Assim como a coluna `atividade`, **não será realizado nenhum tratamento** na coluna `nome_atividade` neste momento.  \n",
+    "Caso futuramente seja identificado algum uso específico para esses dados, poderemos revisitar a coluna."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63eb00c4-1534-452c-8a7f-16837c4a4bf0",
+   "metadata": {},
+   "source": [
+    "## Coluna `tipo_contrato`\n",
+    "\n",
+    "A coluna `tipo_contrato` apresenta os seguintes valores:\n",
+    "\n",
+    "- Efetivo  \n",
+    "- Contrato Temporario  \n",
+    "- Função de Confiança  \n",
+    "- Efetivo em Comissão  \n",
+    "\n",
+    "**Observações:**\n",
+    "\n",
+    "- Não existem valores nulos.  \n",
+    "- Os registros estão consistentes e padronizados.  \n",
+    "\n",
+    "**Decisão adotada:**  \n",
+    "No momento, **nenhum tratamento será realizado** na coluna, pois os dados já estão prontos para análise.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a9fc0806-a531-4e80-aeba-6e2d10b4076d",
+   "metadata": {},
+   "source": [
+    "## Coluna `data_prevista_termino_contrato`\n",
+    "\n",
+    "Observações:\n",
+    "\n",
+    "- Todos os valores da coluna estão nulos.  \n",
+    "- Não existe nenhuma informação preenchida em nenhuma linha.\n",
+    "\n",
+    "Decisão adotada:\n",
+    "\n",
+    "- A coluna será mantida no dataset, mas **não será utilizada nas análises**, pois não contém dados relevantes.  \n",
+    "- Caso seja necessário futuramente, poderá ser descartada ou ignorada sem impacto."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05d61186-dcc0-471c-9acb-2c7c77a802e4",
+   "metadata": {},
+   "source": [
+    "## Coluna `carga_horaria_semanal`\n",
+    "\n",
+    "Observações:\n",
+    "\n",
+    "- A coluna informa a carga horária semanal de cada servidor.  \n",
+    "- Atualmente está no formato `float`, mas os valores representam horas inteiras.\n",
+    "\n",
+    "Tratamento realizado:\n",
+    "\n",
+    "- A coluna foi convertida de `float` para `int` para facilitar futuras análises."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "id": "712a9552-f5ab-4ca2-ac25-69aebaac933b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.series.Series'>\n",
+      "RangeIndex: 23997 entries, 0 to 23996\n",
+      "Series name: carga_horaria_semanal\n",
+      "Non-Null Count  Dtype  \n",
+      "--------------  -----  \n",
+      "23997 non-null  float64\n",
+      "dtypes: float64(1)\n",
+      "memory usage: 187.6 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_prepared[\"carga_horaria_semanal\"].info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "id": "0464156c-7f89-4473-be03-bdedd005636a",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_prepared[\"carga_horaria_semanal\"] = df_prepared[\"carga_horaria_semanal\"].astype(\"Int64\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "id": "627f9c24-a6e0-4c91-8cca-19e8966e4a4c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.series.Series'>\n",
+      "RangeIndex: 23997 entries, 0 to 23996\n",
+      "Series name: carga_horaria_semanal\n",
+      "Non-Null Count  Dtype\n",
+      "--------------  -----\n",
+      "23997 non-null  Int64\n",
+      "dtypes: Int64(1)\n",
+      "memory usage: 211.0 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_prepared[\"carga_horaria_semanal\"].info()"
+   ]
   }
  ],
  "metadata": {
